# accountsservice

./: .gitlab-ci.yml  Makefile.am  NEWS  autogen.sh  configure.ac  meson.build  meson_options.txt  meson_post_install.py
data/: Makefile.am  meson.build  org.freedesktop.Accounts.User.xml
po/: Makevars  it.po  lt.po  pl.po  ro.po
src/: daemon.c  main.c  meson.build  user-classify.c  user.c  util.c
src/libaccountsservice/: act-user-manager.c  act-user.c  act-user.h  meson.build
tests/: test-libaccountsservice.py
tests/dbusmock/: accounts_service.py
